# predmarkets

./: README.md
prediction_market_terminal/: .env.example  .gitignore  pyproject.toml
prediction_market_terminal/config/: settings.py
prediction_market_terminal/scripts/: backtest.py  run_terminal.py
prediction_market_terminal/src/alpha/: arbitrage.py  calibration.py  mean_reversion.py  orderflow.py  time_decay.py  trend_following.py
prediction_market_terminal/src/core/: constants.py  exceptions.py  models.py
prediction_market_terminal/src/data/: state.py
prediction_market_terminal/src/data/feeds/: kalshi.py  oracles.py  polymarket.py
prediction_market_terminal/src/execution/: base.py  kalshi.py  paper.py  polymarket.py  router.py
prediction_market_terminal/src/risk/: correlation.py  guards.py  kelly.py  portfolio.py
prediction_market_terminal/src/terminal/: cli.py  dashboard.py  orchestrator.py
prediction_market_terminal/src/utils/: database.py  logging_config.py
prediction_market_terminal/tests/: conftest.py
prediction_market_terminal/tests/integration/: test_state.py
prediction_market_terminal/tests/unit/: test_arbitrage.py  test_correlation.py  test_fundamental.py  test_guards.py  test_kelly.py  test_mean_reversion.py  test_momentum.py  test_paper_execution.py  test_portfolio.py  test_time_decay.py
scripts/: kelly_calc.py
src/alpha/: fundamental.py  time_decay.py
src/core/: exceptions.py
src/execution/: paper.py  router.py
src/risk/: guards.py  kelly.py  portfolio.py
src/terminal/: orchestrator.py
src/utils/: secrets.py
(+4 files in other folders)
