[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prediction-market-terminal"
version = "0.1.0"
description = "Production-grade algorithmic trading terminal for Polymarket and Kalshi"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9",
    "websockets>=12.0",
    "web3>=6.15",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "feedparser>=6.0",
    "numpy>=1.26",
    "aiosqlite>=0.19",
    "sqlalchemy[asyncio]>=2.0",
    "rich>=13.7",
    "click>=8.1",
    "boto3>=1.34",
    "structlog>=24.1",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "coverage[toml]>=7.4",
    "httpx>=0.26",
]

[project.scripts]
pmt = "src.terminal.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
